Created character model